[package]
name = "abi-to-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.6.2"
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.0.14", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0"
